[package]
name = "hoshino"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["fz6m"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.3", default-features = false, features = ["napi4"] }
napi-derive = "2.13.0"
aho-corasick = "1.1.2"
unicode-width = "0.1.11"

[build-dependencies]
napi-build = "2.0.1"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[profile.release]
lto = true
