[package]
name = "hoshino"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["fz6m"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14.2", default-features = false, features = ["napi4"] }
napi-derive = "2.14.6"
aho-corasick = "1.1.2"
azusa = "1.0.1"
once_cell = "1.19.0"

[build-dependencies]
napi-build = "2.1.0"

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[profile.release]
lto = true
