[package]
name = "hoshino"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["fz6m"]
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.14.4", default-features = false, features = ["napi4"] }
napi-derive = "2.14.6"
aho-corasick = "1.1.2"
azusa = "1.0.1"
once_cell = "1.19.0"
alloc = { path = "./alloc" }

[build-dependencies]
napi-build = "2.1.0"

[profile.release]
lto = true
